fixed responsive spacing

--- a/styles.css
+++ b/styles.css
@@ -1,100 +1,127 @@
 html {
-  box-sizing: border-box;
-  font-size: 100%;
+	box-sizing: border-box;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 body {
 	background-color:#F5F5F5;
-	font-family: 'Noto Serif', serif;
 	margin: 0;
 }
 
 main {
-	margin-left: 24px;
-	margin-right: 24px;
-	max-width: 720px;
+	max-width: 680px;
 }
 
-@media screen and (min-width: 744px){
-	main {
-		margin: auto;
-	}
+
+/* ===== FONTS ===== */
+body {
+	font-family: 'Noto Serif', serif;
+}
+
+.title,
+.subtitle,
+.date,
+.it-me {
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+/* ===== FONT SIZES ===== */
+article > .title {
+	font-size: 2em;
+}
+
+section > .title {
+	font-size: 1.45em;
+	font-weight: bold;
+}
+
+section > .subtitle,
+section > .date {
+	font-size: 1.15em;
+}
+
+/* ===== VERTICAL SPACING ===== */
+section {
+	margin-bottom: 32px;
 }
 
 article {
-	margin-bottom: 128px;
-}
-
-article > h3 {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 3em;
-}
-
-article > .header {
-	font-family: 'Source Sans Pro', sans-serif;
-}
-
-section {
-	margin-bottom: 2em;
-}
-
-section > .header.main-header {
-	font-size: 1.5em;
-	font-weight: bold;
-
-}
-
-section > .header.sub-header {
-	font-size: 1.1em;
+	margin-bottom: 64px;
 }
 
 li {
-	margin-bottom: 0.3em;
+	margin-bottom: 0.32em;
 }
 
-.btn-icon {
-	color: #424242;
-}
-.btn-icon:hover {
-	color: #212121;
+/* ===== HORIZONTAL SPACING ===== */
+.main-container {
+	display: flex;
+	justify-content: center;
 }
 
-.cursor-pointer {
-	cursor: pointer;
+.content-margin {
+	margin-left: 24px;
+	margin-right: 24px;
+}
+
+ul {
+	padding-left: 20px;
+}
+
+@media only screen and (min-width: 730px) {
+	.content-margin  {
+		margin-left: 48px;
+		margin-right: 48px;
+	}
+
+	ul {
+		padding-left: 40px;
+	}
+}
+
+@media only screen and (min-width: 910px) {
+	.content-margin  {
+		margin-left: 64px;
+		margin-right: 64px;
+	}
+}
+
+
+/* ====== FOOTER ====== */
+a, .text-decoration-none:hover {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+a:-webkit-any-link {
+	color: inherit;
 }
 
 footer {
-	overflow: auto;
+	color: #FAFAFA;
+	background: #212121;
+	height: 92px;
+
 	display: flex;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: flex-end;
-	margin-bottom: 1.5em;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-.footer-left {
-	float: left;
-	bottom: 0;
-	height: 100%;
-}
-
-.footer-right {
-	float: right;
+.external-link {
 	display: inline-block;
+	padding-left: 24px;
+	padding-right: 24px;
 }
 
-.it-me {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 1.3em;
+.btn-icon {
+	cursor: pointer;
 }
 
-.flip-180 {
-	-moz-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-}
